--- a/locales/zh-HK/homepage.json
+++ b/locales/zh-HK/homepage.json
@@ -25,7 +25,7 @@
   "RCTestDate": "{{RCTestDate,ll}}",
   "firstReleaseDate": "{{firstReleaseDate,ll}}",
   "The beginning": "開始",
-  "getStarted1": "下載並安裝 <a href=\"{{java8}}\" target=\"_blank\">Java SE Runtime Environment 8</a>",
+  "getStarted1": "下載並安裝 <a href=\"{{java}}\" target=\"_blank\">Java SE Runtime Environment</a>",
   "getStarted2": "(Windows用戶) 下載並安裝 <a href=\"{{vCpp2012Redist}}\" target=\"_blank\">Microsoft Visual C++ 2012 可再发行组件包</a>",
   "getStarted3": "透過以下連結下載最新版本的Semux錢包",
   "Coin Distribution": "SEM代幣分配",
