--- a/locales/en/homepage.json
+++ b/locales/en/homepage.json
@@ -7,8 +7,8 @@
   "FAQ": "FAQ",
   "SEMUX Stats": "SEMUX Stats",
   "SEMUX Explorer": "SEMUX Explorer",
-  "headline": "A New And <br>Exciting Blockchain",
-  "headlineDescriptionShort": "Semux is an innovative high-performance <br>blockchain platform powered by <br><b>Semux BFT consensus algorithm.</b>",
+  "headline": "High-performance <br>Blockchain",
+  "headlineDescriptionShort": "Semux is an innovative high-performance blockchain platform, <br>powered by <b>Semux BFT consensus algorithm</b>.",
   "headlineDescription": "<b>Semux</b> is an innovative high-performance blockchain platform that powers decentralized application. It's written purely in Java and powered by Semux BFT consensus algorithm. <br class=\"visible\"><a href=\"https://github.com/semuxproject/semux-core/blob/master/docs\" target=\"_blank\">$t(readMoreInWiki)</a>",
   "readMoreInWiki": ">> Read more on the Wiki",
   "Download Now!": "Download Now!",
