--- a/locales/zh-CN/homepage.json
+++ b/locales/zh-CN/homepage.json
@@ -7,8 +7,8 @@
   "FAQ": "常见问题",
   "SEMUX Stats": "SEMUX数据统计",
   "SEMUX Explorer": "SEMUX浏览器",
-  "headline": "一个崭新的区块鍊平台",
-  "headlineDescriptionShort": "Semux是一个创新的的高效能区块鍊平台，<br>基于Semux BFT共识演算法。</b>",
+  "headline": "高性能区块链平台",
+  "headlineDescriptionShort": "Semux是一个创新的的高性能区去中心化应用平台，<br>基于Semux BFT共识演算法。</b>",
   "headlineDescription": "<b>Semux</b> 是一个创新的的高效能区块鍊去中心化应用平台。Semux使用Java撰写，并基于Semux BFT共识演算法。 <br class=\"visible\"><a href=\"https://github.com/semuxproject/semux-core/blob/master/docs\" target=\"_blank\">$t(readMoreInWiki)</a>",
   "readMoreInWiki": ">> 阅读Wiki获取更多信息",
   "Download Now!": "下载！",
