--- a/locales/zh-HK/homepage.json
+++ b/locales/zh-HK/homepage.json
@@ -7,8 +7,8 @@
   "FAQ": "常見問題",
   "SEMUX Stats": "SEMUX數據統計",
   "SEMUX Explorer": "SEMUX瀏覽器",
-  "headline": "一個嶄新的區塊鍊平台",
-  "headlineDescriptionShort": "Semux是一個創新的的高效能區塊鍊平台，<br>基於Semux BFT共識演算法。</b>",
+  "headline": "高性能區塊鏈平台",
+  "headlineDescriptionShort": "Semux是一個創新的的高性能區去中心化應用平台，<br>基於Semux BFT共識演算法。</b>",
   "headlineDescription": "<b>Semux</b> 是一個創新的的高效能區塊鍊去中心化應用平台。Semux使用Java撰寫，並基於Semux BFT共識演算法。 <br class=\"visible\"><a href=\"https://github.com/semuxproject/semux-core/blob/master/docs\" target=\"_blank\">$t(readMoreInWiki)</a>",
   "readMoreInWiki": ">> 閱讀Wiki獲取更多信息",
   "Download Now!": "下載！",
