--- a/locales/zh-CN/homepage.json
+++ b/locales/zh-CN/homepage.json
@@ -62,7 +62,7 @@
   "What makes Semux more interesting then other cryptos?": "Semux有什么特色？",
   "faqFeatures": "Semux BFT共识演算法，只需要一次确认即可完成交易。<br> 高交易吞吐量：每个区块可处理 ({{txsPerBlock}} 笔交易。<br> 计划支援去中心化应用。",
   "Is Semux listed on any exchanges?": "Semux何时会上交易所？",
-  "faqExchange": "2018 第一季 ~ 第二季",
+  "faqExchange": "Yes! We are currently listed on <a href=\"https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM\" target=\"_blank\">stocks.exchange</a>",
   "How many people are on the development team?": "Semux团队拥有多少开发者？",
   "faqDevs": "Semux团队目前拥有 {{devs}} 三名核心开发者与数名贡献者。Semux团队正在持续招聘新的成员。",
   "How can I get SEM?": "我要如何获得SEM代币？",
