--- a/locales/zh-HK/homepage.json
+++ b/locales/zh-HK/homepage.json
@@ -62,7 +62,7 @@
   "What makes Semux more interesting then other cryptos?": "Semux有什麼特色？",
   "faqFeatures": "Semux BFT共識演算法，只需要一次確認即可完成交易。<br> 高交易吞吐量：每個區塊可處理 ({{txsPerBlock}} 筆交易。<br> 計畫支援去中心化應用。",
   "Is Semux listed on any exchanges?": "Semux何時會上交易所？",
-  "faqExchange": "2018 第一季 ~ 第二季",
+  "faqExchange": "Yes! We are currently listed on <a href=\"https://app.stocks.exchange/en/basic-trade/pair/BTC/SEM\" target=\"_blank\">stocks.exchange</a>",
   "How many people are on the development team?": "Semux團隊擁有多少開發者？",
   "faqDevs": "Semux團隊目前擁有 {{devs}} 三名核心開發者與數名貢獻者。Semux團隊正在持續招聘新的成員。",
   "How can I get SEM?": "我要如何獲得SEM代幣？",
